# doctrine-protocol

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  DOCTRINE_OS.md  NOTICE  README.md  RELEASE_NOTES.md  ROADMAP.md  SOUL_PROTOCOL.md  SPEC.md  TESSERACT.md  VISION.md  pyproject.toml
.doctrine-index/: ARCHITECTURE.md.doctrine  CHANGELOG.md.doctrine  COMPATIBILITY.md.doctrine  CONTRIBUTING.md.doctrine  DOCTRINE_FILETYPE_V1.md.doctrine  DOCTRINE_NATIVE_FILETYPE.md.doctrine  LICENSE.doctrine  MANIFEST.json  NOTICE.doctrine  README.md.doctrine  ROADMAP.md.doctrine  SOUL_PROTOCOL.md.doctrine  SPEC.md.doctrine  TESSERACT.md.doctrine  VISION.md.doctrine  docs__capabilities.md.doctrine  docs__how-it-works.md.doctrine  docs__prototype-shell.md.doctrine  doctrineos____init__.py.doctrine  doctrineos__adapters____init__.py.doctrine  doctrineos__adapters__stub.py.doctrine  doctrineos__capabilities.py.doctrine  doctrineos__capability_kernel.py.doctrine  doctrineos__policy.py.doctrine  doctrineos__profile.py.doctrine  doctrineos__receipts.py.doctrine  doctrineos__runtime.py.doctrine  doctrineos__shell.py.doctrine  doctrineos__state.py.doctrine  examples__README.md.doctrine  examples__api_payload_adapter.py.doctrine  examples__basic.doctrine.doctrine  examples__local_model_prompt.py.doctrine  examples__mount_standard_template.py.doctrine  examples__prompt_context_export.py.doctrine  nodes__README.md.doctrine  nodes__anti-drift.md.doctrine  nodes__clarity.md.doctrine  nodes__concise-response.md.doctrine  nodes__example.md.doctrine  (+29 more)
docs/: how-it-works.md  (+2 more)
(+37 files in other folders)
