[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soul-protocol"
version = "0.1.0"
description = "Mountable AI behavior framework for Soul Protocol-compatible objects, receipts, user authority, safety, and anti-drift"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "Xxaion Labs", email = "xxaionlabs@gmail.com"}]
keywords = ["ai", "llm", "soul-protocol", "ai-safety", "mountable-context", "guardrails"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Xxaion-Labs/Soul-Protocol"

[project.scripts]
doctrine = "doctrine.cli:main"
doctrineos = "doctrineos.shell:main"

[tool.setuptools]
packages = ["doctrine", "doctrineos", "doctrineos.adapters"]
package-dir = {"doctrine" = "sdk", "doctrineos" = "doctrineos"}

[tool.pytest.ini_options]
pythonpath = ["."]
